Bug 63555 - quotacheck.c does not use QUOTACHECK path found during configure
Summary: quotacheck.c does not use QUOTACHECK path found during configure
Status: RESOLVED FIXED
Alias: None
Product: systemd
Classification: Unclassified
Component: general (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: systemd-bugs
QA Contact: systemd-bugs
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-04-15 13:24 UTC by Michał Górny
Modified: 2013-05-06 19:16 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description Michał Górny 2013-04-15 13:24:56 UTC
configure.ac does:

AC_PATH_PROG([QUOTACHECK], [quotacheck], [/usr/sbin/quotacheck])

yet src/quotacheck/quotacheck.c does:

        static const char * const cmdline[] = {
                "/sbin/quotacheck",
                "-anug",
                NULL
        };

So it not only does not respect the autodetection but also uses a path different than the default one.
Comment 1 Lennart Poettering 2013-05-06 19:16:38 UTC
Fixed in git.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.