quota: use QUOTACHECK path correctly as tested in configure.ac

https://bugs.freedesktop.org/show_bug.cgi?id=63555